Collapsing Pages Changelog

0.3 (2008.12.04)
  * can now use multiple instance of the widget
  * can also use manually
  * added option to animate expanding
  * added more options for expanding characters
  * consolidated javascript to share code with other collapsing plugins

0.2.5 (2008.11.01)
  * fixed bug in that autoExpand was not available to getSubPage

0.2.4 (2008.10.28)
  * fixed bug with missing seventh argument to getSubPage when used recursively

0.2.3 (2008.07.14)
  * Added option to automatically expand some pages
  * Added option to control the number of levels of pages which are expanded
  * Added "self" class to pages in list which match the current page. No link
    is made for these. CSS can
    then be used to style these differently

0.2.2 (2008.05.23)
  * Re-fixed code so that xhtml validates
  * Added option for different expand and collapse icons

0.2.1 (2008.05.01)
  * Link now spans the whole dropdown
  * Now indicates the presence of an additional submenu (doesn't work in IE 6
    or less)
  * fixed html so that it validates correctly

0.2 (2008.04.30)
  * Now includes the possibility of providing a drop-down menu of pages and
    sub-pages, instead of a nested list. Only useful for a header navigation 

0.1.1 (2008.04.25)
  * Can exclude pages (and sub-pages of those pages)

0.1 (2008.04.23):
	* Initial Release