@@ -1,13 +1,18 @@
     <p>
      <input type="checkbox" name="collapsPage[<?php echo $number ?>][includePosts]" <?php if($includePosts=='yes') echo 'checked'; ?> id="collapsPage-includePosts-<?php echo $number ?>"></input> <label for="showPosts">Show posts as well as pages</label>
-    </p>
-    <p>Sort by:<br />
+   &nbsp;&nbsp;
+   <input type="checkbox" name="collapsPage[<?php echo $number
+   ?>][animate]" <?php if ($animate==1) echo
+   'checked'; ?> id="animate-<?php echo $number ?>"></input> <label
+   for="animate">Animate collapsing and expanding</label>
+   </p>
+    <p>Sort by:&nbsp;&nbsp;
      <input type="radio" name="collapsPage[<?php echo $number ?>][sort]" <?php if($sort=='pageName') echo 'checked'; ?> id="collapsPage-sortPageName-<?php echo $number ?>" value='pageName'></input> <label for="sortPageName">Page name</label>
      <input type="radio" name="collapsPage[<?php echo $number ?>][sort]" <?php if($sort=='pageId') echo 'checked'; ?> id="collapsPage-sortPageId-<?php echo $number ?>" value='pageId'></input> <label for="sortPageId">Page id</label>
      <input type="radio" name="collapsPage[<?php echo $number ?>][sort]" <?php if($sort=='pageSlug') echo 'checked'; ?> id="collapsPage-sortPageSlug-<?php echo $number ?>" value='pageSlug'></input> <label for="sortPageSlug">Page Slug</label>
      <input type="radio" name="collapsPage[<?php echo $number ?>][sort]" <?php if($sort=='menuOrder') echo 'checked'; ?> id="collapsPage-sortMenuOrder-<?php echo $number ?>" value='menuOrder'></input> <label for="sortMenuOrder">Menu Order</label>
     </p>
-    <p>Sort order:<br />
+    <p>Sort order:&nbsp;&nbsp
      <input type="radio" name="collapsPage[<?php echo $number ?>][sortOrder]" <?php if($sortOrder=='ASC') echo 'checked'; ?> id="collapsPage-sortASC-<?php echo $number ?>" value='ASC'></input> <label for="sortASC">Ascending</label>
      <input type="radio" name="collapsPage[<?php echo $number ?>][sortOrder]" <?php if($sortOrder=='DESC') echo 'checked'; ?> id="collapsPage-sortDESC-<?php echo $number ?>" value='DESC'></input> <label for="sortDESC">Descending</label>
     </p>
@@ -16,7 +21,7 @@
      <input type="radio" name="collapsPage[<?php echo $number ?>][expand]" <?php if($expand==1) echo 'checked'; ?> id="expand1" value='1'></input> <label for="expand1">+&nbsp;&mdash;</label>
      <input type="radio" name="collapsPage[<?php echo $number ?>][expand]"
      <?php if($expand==2) echo 'checked'; ?> id="expand2" value='2'></input>
-     <label for="expand2">[+]&nbsp;[&mdash;]</label><br />
+     <label for="expand2">[+]&nbsp;[&mdash;]</label>&nbsp;&nbsp;
      images:
      <input type="radio" name="collapsPage[<?php echo $number ?>][expand]"
      <?php if($expand==3) echo 'checked'; ?> id="expand0" value='3'></input>
@@ -25,7 +30,7 @@
      src='<?php echo get_settings('siteurl') .
      "/wp-content/plugins/collapsing-pages/" ?>img/expand.gif' /></label>
     </p>
-    <p>Include pages at this depth<br />
+    <p>Include pages at this depth:&nbsp;&nbsp;
      <select name="collapsPage[<?php echo $number ?>][depth]"  id="collapsPage-depth-<?php echo $number ?>">
         <option <?php if ($depth==-1) echo "selected='selected'" ?> value="-1">All levels (default)</option>
         <option <?php if ($depth==0) echo "selected='selected'" ?> value="0">Only main pages</option>
@@ -48,8 +53,8 @@
      <input type="text" name="collapsPage[<?php echo $number ?>][defaultExpand]" value="<?php echo $defaultExpand ?>" id="collapsPage-defaultExpand-<?php echo $number ?>"></input> 
     </p>
    <p>
-   <input type="checkbox" name="collapsPage[<?php echo $number
-   ?>][animate]" <?php if ($animate==1) echo
-   'checked'; ?> id="animate-<?php echo $number ?>"></input> <label
-   for="animate">Animate collapsing and expanding</label>
-   </p>
+<label for="collapsPageStyle">Style info:</label>
+   <textarea cols='60' rows='6' id="collapsPageStyle" name="collapsPageStyle">
+    <?php echo stripslashes(get_option('collapsPageStyle')) ?>
+   </textarea>
+    </p>
